--- a/home.html
+++ b/home.html
@@ -15,9 +15,28 @@
 
 </head>
 <body>
-  <img src="brainpic.jpg" alt="ltrtbrain" id="brainpic">
+  <!-- <img src="brainpic.jpg" alt="ltrtbrain" id="brainpic"> -->
 
- 
+ <div class="header-photo">
+   <div class="article">
+     <div class="title">Riding High</div>
+   <div class="subtitle">What’s a Rascal Rodeo? Think Special Olympics in dirt<br><span>TIP FROM ME: watch fullscreen</span></div>
+   </div>
+ </div>
+ <div class="container-text">  
+   <div class="intro">Ann-Erica Whitemarsh wanted to be a cowgirl. Growing up in Pasco, Washington, not far from the Oregon and Idaho borders, she hoped to follow in the bootsteps of her older brother, who made it to the national steer-wrestling finals for high school students.</div>
+   <div class="plain-text">
+     <p>She tagged along to those finals, and in the process heard about a number of different events that occurred alongside steer-wrestling, one of which in particular piqued her interest. Even more rewarding than riding and roping, it seemed to Whitemash, was the so-called “exceptional rodeo,” for people with special needs</p>
+     <p>Think Special Olympics in dirt. Dozens of kids and adults with various mental and physical disabilities rode ponies and participated in rodeo-like events. They roped wooden steer, ran around with stick horses, and sat on barrels that rocked back and forth like bulls. Whitemarsh could not help but be inspired by the stories.In 2001, when it was time to do her high school senior project, Whitemash decided to organize an exceptional rodeo in Pasco. It was a success. She went off to college for business and spent a few more years working in a cubicle, but she couldn’t shake the feeling that what she really wanted to do was organize exceptional rodeos.</p>
+     <p>Whitemarsh lassoed her dream in 2011, incorporating the nonprofit Rascal Rodeo to produce rodeos for people with special needs. The first RR was held at the Kennewick (Washington) Fair, with thirty participants. The following year, RR produced four events (two each in Washington and Oregon) and seven in 2013, and is on pace to do at least twelve this year, expanding into Idaho.</p>
+     <p>Rascal Rodeos take place on the same day and at the same location as professional rodeo events. Whitemarsh arranges for her group’s equipment to be set up either in the arena or just outside it, and the Rascal Rodeos usually start at 10 a.m. and run about an hour and a half.</p>
+     <p>Each event draws participants from nearby communities, who register online or by phone. They have ranged in age from 2 to 70, and no disability is excluded. RR has had participants with autism, Down syndrome, schizophrenia, and other mental challenges; some of the wheelchair participants are disabled as the result of accidents.</p>
+     <p>She also loves doing it so she can show parents of special needs kids that their children can do things they never imagined possible. The parents, she says, are often wary to get involved due to their experience with their kids’ limitations, and many need convincing just to show up.</p>
+     <p>But here’s how it usually goes: “After a couple of minutes their child wants to see everything and touch everything, and then they really warm up and want to ride a horse,” Whitemarsh says, “and by that time the parents are crying.”</p>
+     <p>At other times, it’s the kids themselves who need some persuading. That was the case with Jacob, whose mother, Laurie Sarver, brought him to his first Rascal Rodeo at the Kennewick County Fair three years ago, when he was six. It was crowded and loud, and Jacob, who has high-functioning autism, was overwhelmed.</p>
+     Text + photo from <a href="https://medium.com/storytelling-for-good/riding-high-d5cd442ce318">Medium</a>
+   </div>
+ </div>
 
 </body>
 </html>
