--- a/home.html
+++ b/home.html
@@ -10,28 +10,34 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script type="text/javascript" src="home.js"></script>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
-  <img src="brainpic.jpg" alt="" id="background_brain">
-  
-  <nav class="navbar navbar-light bg-faded">
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Features</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Pricing</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-  </ul>
-</nav>
+<body
+
+  <div class="card">
+      <div class="photo"></div>
+      <div class="banner"></div>
+      <ul>
+          <li><b>Jake Fishbain</b></li>
+          <li>Full Stack Developer</li>
+
+      </ul>
+      <button class="contact" id="main-button">click to get in touch</button>
+      <div class="social-media-banner">
+          <a href="https://twitter.com/jakefishbain"><i class="fa fa-twitter"></i></a>
+          <a href="https://github.com/jakefishbain"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/jakefishbain
+"><i class="fa fa-linkedin"></i></a>
+      </div>
+    <form class="email-form">
+          <input id="name" type="text" placeholder="name">
+          <input id="email" type="text" placeholder="email">
+          <textarea id="comment" type="text" placeholder="comment"></textarea>
+          <button class="contact">send</button>
+    </form>
+    </div>
 </body>
 </html>
