--- a/home.html
+++ b/home.html
@@ -15,8 +15,10 @@
   <script type="text/javascript" src="home.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body
-
+<body>
+  <div>
+    <img src="brainpic.jpg" alt="" id="body_back">
+  </div>
   <div class="card">
       <div class="photo"></div>
       <div class="banner"></div>
@@ -25,19 +27,22 @@
           <li>Full Stack Developer</li>
 
       </ul>
-      <button class="contact" id="main-button">click to get in touch</button>
+      <button class="contact" id="main-button"><a href="mailto:jakefishbain@gmail.com">click to get in touch</a></button>
       <div class="social-media-banner">
           <a href="https://twitter.com/jakefishbain"><i class="fa fa-twitter"></i></a>
           <a href="https://github.com/jakefishbain"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/jakefishbain
 "><i class="fa fa-linkedin"></i></a>
       </div>
-    <form class="email-form">
-          <input id="name" type="text" placeholder="name">
-          <input id="email" type="text" placeholder="email">
-          <textarea id="comment" type="text" placeholder="comment"></textarea>
-          <button class="contact">send</button>
-    </form>
+
+    <!-- <form method="post" action="email.php" class="email-form">
+      <input id="name" type="text" placeholder="name">
+      <input id="email" type="text" placeholder="email">
+      <input type="text" name="subject" placeholder='subject'>
+      <textarea id="comment" type="text" placeholder="comment" name='message'></textarea>
+      <button class="contact">send</button>
+    </form> -->
+
     </div>
 </body>
 </html>
