--- a/home.html
+++ b/home.html
@@ -4,16 +4,13 @@
   <meta charset="UTF-8">
   <title>Home</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src='home.js'></script>
   <link rel="stylesheet" href="styles.css">
-  <script type="text/javascript" src="home.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
   <div>
@@ -25,24 +22,25 @@
       <ul>
           <li><b>Jake Fishbain</b></li>
           <li>Full Stack Developer</li>
-
       </ul>
-      <button class="contact" id="main-button"><a href="mailto:jakefishbain@gmail.com">click to get in touch</a></button>
+      <a href="mailto:jakefishbain@gmail.com?subject=Get in touch!"><button class="contact" id="main-button">click to get in touch</button></a>
       <div class="social-media-banner">
-          <a href="https://twitter.com/jakefishbain"><i class="fa fa-twitter"></i></a>
-          <a href="https://github.com/jakefishbain"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/jakefishbain
-"><i class="fa fa-linkedin"></i></a>
+          <a href="https://twitter.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='twitter'><i class="fa fa-twitter"></i></a>
+          <div class='resume-tooltip' data-toggle='tooltip' data-placement='bottom' title='Resumè'>
+            <a href="#myModal" data-target="#myModal" data-toggle="modal" class="MainNavText" id="MainNavHelp"><i class="fa fa-info-circle"></i></a>
+          </div>
+          <a href="https://github.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='Github'><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='LinkedIn'><i class="fa fa-linkedin"></i></a>
+
       </div>
+    </div>
 
-    <!-- <form method="post" action="email.php" class="email-form">
-      <input id="name" type="text" placeholder="name">
-      <input id="email" type="text" placeholder="email">
-      <input type="text" name="subject" placeholder='subject'>
-      <textarea id="comment" type="text" placeholder="comment" name='message'></textarea>
-      <button class="contact">send</button>
-    </form> -->
-
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <embed src="resume.pdf" width="100%" height="2100px" />
+        </div>
+      </div>
     </div>
 </body>
 </html>
