add centered labels to email

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
           <li><b>Jake Fishbain</b></li>
           <li>Full Stack Developer</li>
       </ul>
-      <a href="mailto:jakefishbain@gmail.com?subject=Get in touch!"><button class="contact" id="main-button">click to get in touch</button></a>
+      <a href="mailto:jakefishbain@gmail.com?subject=Get in touch!"><button class="contact" id="main-button" data-toggle='tooltip' data-placement='top' title='Email Me!'><i class=" email-btn fa fa-envelope-open-o" aria-hidden="true"></i></button></a>
       <div class="social-media-banner">
           <a href="https://twitter.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='twitter'><i class="fa fa-twitter"></i></a>
           <div class='resume-tooltip' data-toggle='tooltip' data-placement='bottom' title='Resumè'>
@@ -31,7 +31,6 @@
           </div>
           <a href="https://github.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='Github'><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='LinkedIn'><i class="fa fa-linkedin"></i></a>
-
       </div>
     </div>
 
