--- a/home.html
+++ b/home.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
-
+  <title>Jake Fishbain | Developer</title>
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src='home.js'></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 </head>
 <body>
@@ -20,12 +22,12 @@
       <div class="photo"></div>
       <div class="banner"></div>
       <ul>
-          <li><b>Jake Fishbain</b></li>
-          <li>Full Stack Developer</li>
+          <li class='name-head'>Jake Fishbain</li>
+          <li class='title-head'>Full Stack Developer</li>
       </ul>
       <a href="mailto:jakefishbain@gmail.com?subject=Get in touch!"><button class="contact" id="main-button" data-toggle='tooltip' data-placement='top' title='Email Me!'><i class=" email-btn fa fa-envelope-open-o" aria-hidden="true"></i></button></a>
       <div class="social-media-banner">
-          <a href="https://twitter.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='twitter'><i class="fa fa-twitter"></i></a>
+          <a href="https://twitter.com/jakefishbain" target="_blank" data-toggle='tooltip' data-placement='bottom' title='Twitter'><i class="fa fa-twitter"></i></a>
           <div class='resume-tooltip' data-toggle='tooltip' data-placement='bottom' title='Resumè'>
             <a href="#myModal" data-target="#myModal" data-toggle="modal" class="MainNavText" id="MainNavHelp"><i class="fa fa-info-circle"></i></a>
           </div>
